<resources>
    <string name="app_name">EZ-Park</string>
    <string name="title_receipt">Receipt</string>
    <string name="title_receipt_list">Orders Receipts</string>
    <string name="title_profile">Profile</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="title_sign_in">Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="forget_password">Forget password?</string>
    <string name="full_name">Full name</string>
    <string name="car_plate">Car Plate Number</string>
    <string name="credit_card_info">Credit Card Information</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="expiry_date">Credit Card Expiry Date</string>
    <string name="card_name">Name On Card</string>
    <string name="cvv_number">CVV Number</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="name_profile">Name:</string>
    <string name="email_profile">Email:</string>
    <string name="password_profile">Password:</string>
    <string name="phone_profile">Contact Number:</string>
    <string name="car_plate_profile">Car Plate Number:</string>
    <string name="payment_profile">Payment Information:</string>
    <string name="credit_card_number_profile">Credit Card Number:</string>
    <string name="expiry_date_profile">Expiry Date (MM/YY):</string>
    <string name="card_name_profile">Name On Card:</string>
    <string name="cvv_profile">CVV Number:</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="done_button">Done</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_phone">Contact via Phone</string>
    <string name="contact_email">Contact via Email</string>
</resources>
